Fix multilanguage for Amazon and fix overflow on mobile

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -785,3 +785,7 @@ h3 {
 .wallpaper img {
   width: 100%;
 }
+
+#gallery {
+  overflow: hidden;
+}
